[package]
name = "rawsock"
version = "0.1.0"
authors = ["Szymon Wieloch <szymon.wieloch@gmail.com>"]
description = "Library for receiving and sending raw packets using libraries such as pcap, wpcap, npcap and pf_ring."
keywords = [
    #common functions
    "packet", "socket", "pf_ring", "wpcap", "pcap"]
license = "MIT"
repository = "https://github.com/szymonwieloch/rust-rawsock"

[dependencies]
dlopen = "0.1.3"
dlopen_derive = "0.1.0"
libc = "0.2.29"
time = "0.1"

[[example]]
name = "pcap"
crate-type = ["bin"]

[[example]]
name = "wpcap"
crate-type = ["bin"]

[[example]]
name = "pfring"
crate-type = ["bin"]

[[example]]
name = "rawlib"
crate-type = ["bin"]