[package]
name = "rawsock"
version = "0.2.0"
edition = "2018"
authors = ["Szymon Wieloch <szymon.wieloch@gmail.com>"]
description = "Library for receiving and sending raw packets. While most crate wrap just one library, rawsock allows you to use pcap, wpcap, npcap and pf_ring (pfring) using a consistent API for all of them."
keywords = ["packet", "socket", "pf_ring", "wpcap", "pcap"]
license = "MIT"
repository = "https://github.com/szymonwieloch/rust-rawsock"
categories = ["network-programming"]

[badges.travis-ci]
repository = "szymonwieloch/rust-rawsock"
branch = "master"

[badges.is-it-maintained-open-issues]
repository = "szymonwieloch/rust-rawsock"

[dependencies]
dlopen = "0.1.7"
dlopen_derive = "0.1.4"
libc = "0.2.29"
time = "0.1"
errno = "0.2.4"
bitflags="1.1.0"

[[example]]
name = "dynamic"

[[example]]
name = "static"

[[example]]
name = "list_interfs"